# Cryptography

./: .gitignore  completed.txt  genkeys.py  requirements.txt
SiFTv1.0/: pyproject.toml
SiFTv1.0/client/: client.py  server_public.pem  server_public1.pem
SiFTv1.0/client/keys/: server_public.pem
SiFTv1.0/client/siftprotocols/: __init__.py  siftlogin.py  siftmtp.py  upl.py
SiFTv1.0/server/: .gitignore  server.py  server_private1.pem
SiFTv1.0/server/siftprotocols/: cmd.py  login.py  siftlogin.py  siftmtp.py  upl.py
sift-v1/: requirements.txt
sift-v1/client/siftprotocols/: cmd.py  dnl.py
sift-v1/docs/: SiFT-v1.0-spec.md
sift-v1/server/siftprotocols/: dnl.py  mtp.py
sift-v1/server/users/(user folders, e.g. alice/: )
sift-v1/tests/: test_mtp.py
slop 1.0/: README.md
slop 1.0/client/: client.py
slop 1.0/client/siftprotocols/: login.py  mtp.py
slop 1.0/scripts/: gen_keys.py
slop 1.0/server/: server.py
slop 1.0/server/keys/: server_key.pem
slop 1.0/server/siftprotocols/: __init__.py  cmd.py  dnl.py  login.py  mtp.py  upl.py
slop 1.0/tests/: test_login.py
