[tool.poetry]
name = "sift-v1"
version = "0.1.0"
description = "A secure file transfer protocol implementation."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^39.0.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"